[gd_scene load_steps=11 format=3 uid="uid://b70wlvy8doyxn"]

[ext_resource type="Script" path="res://levels/Player.gd" id="1_oaghk"]
[ext_resource type="TileSet" uid="uid://sbv15cw2347h" path="res://background_tilemap.tres" id="1_wind8"]
[ext_resource type="Texture2D" uid="uid://cw0ofmtn6rr5p" path="res://ART/player_sprites/player1.png" id="2_w8afk"]
[ext_resource type="PackedScene" uid="uid://c7tcnhp8tfqc0" path="res://human_poor.tscn" id="4_7qnxo"]
[ext_resource type="PackedScene" uid="uid://cd0e71ha81mcd" path="res://human_middle.tscn" id="5_3jnbg"]
[ext_resource type="PackedScene" uid="uid://cqv7vdta72yva" path="res://police.tscn" id="6_ynnnc"]
[ext_resource type="Script" path="res://levels/walk.gd" id="7_wrlii"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ijn5"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iwucn"]
radius = 4.0

[sub_resource type="Curve2D" id="Curve2D_62onc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -37, -77, 0, 0, 0, 0, 137, -76, 0, 0, 0, 0, 139, 45, 0, 0, 0, 0, -37, 42, 0, 0, 0, 0, -37, -77)
}
point_count = 5

[node name="Main_scene" type="Node"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_wind8")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 327680, 6, 131068, 327680, 6, 131067, 65536, 6, 65531, 393216, 6, -5, 393216, 6, -65541, 393216, 6, -65540, 327680, 6, -4, 327680, 6, -131076, 327680, 6, -131077, 393216, 6, -131078, 262144, 6, -65542, 262144, 6, -6, 262144, 6, 65530, 262144, 6, 131066, 458752, 5, 196603, 262144, 6, 196604, 327680, 6, 262139, 262144, 6, 327676, 327680, 7, 327677, 327680, 7, 327678, 196608, 9, 262142, 524288, 4, 262141, 262144, 7, 262140, 0, 7, 327675, 458752, 5, 393214, 131072, 5, 458750, 0, 5, 458751, 131072, 4, 393216, 131072, 4, 393217, 131072, 4, 393218, 131072, 4, 393219, 262144, 9, 327683, 458752, 4, 327684, 262144, 7, 327685, 262144, 7, 327686, 262144, 7, 327687, 262144, 7, 327688, 262144, 7, 327689, 65536, 7, 262153, 458752, 4, 262154, 196608, 8, 196618, 131072, 5, 131082, 131072, 5, 65546, 131072, 5, 10, 131072, 5, -65526, 131072, 5, -131062, 131072, 5, -196598, 131072, 5, -262134, 131072, 5, -327670, 65536, 4, -327671, 0, 5, -393207, 65536, 4, -393208, 131072, 4, -393209, 131072, 4, -393210, 131072, 4, -393211, 131072, 4, -393212, 131072, 4, -393213, 131072, 4, -393214, 131072, 4, -393215, 131072, 4, -393216, 131072, 4, -327681, 131072, 4, -327682, 131072, 4, -327683, 131072, 4, -327684, 327680, 8, -262149, 393216, 6, -262150, 262144, 6, -196614, 262144, 6, -262148, 327680, 6, -196612, 327680, 6, -196613, 393216, 6, -327686, 458752, 4, -327685, 262144, 7, 327690, 327680, 6, 393226, 524288, 5, 393225, 327680, 7, 393224, 327680, 7, 393223, 327680, 7, 393222, 327680, 7, 393221, 327680, 7, 393220, 327680, 7, 131075, 196608, 0, 65540, 196608, 0, 4, 65536, 0, 5, 65536, 0, -65531, 0, 0, -131067, 0, 0, -131068, 0, 0, -65532, 196608, 0, 65539, 0, 0, 3, 0, 0, -65533, 196608, 0, -131069, 196608, 0, 131076, 0, 0, 65541, 0, 0, -131066, 0, 0, -131065, 0, 0, -65529, 65536, 0, 7, 131072, 0, 65543, 65536, 0, 65542, 196608, 0, 6, 65536, 0, -65530, 0, 0, -196603, 131072, 0, -196604, 131072, 0, -262140, 0, 0, -196605, 0, 0, -196606, 65536, 0, -131070, 131072, 0, -65534, 131072, 0, -65535, 65536, 0, 1, 196608, 0, 0, 196608, 0, -65536, 0, 0, -1, 131072, 0, 65535, 196608, 0, -327677, 196608, 0, -327678, 0, 0, -327679, 196608, 0, -327680, 0, 0, -262145, 65536, 0, -262146, 196608, 0, -262147, 0, 0, -196611, 131072, 0, -131075, 65536, 0, -65539, 0, 0, -3, 65536, 0, 65533, 131072, 0, 131069, 0, 0, 196605, 196608, 0, 196606, 196608, 0, 196607, 0, 0, 262143, 65536, 0, 327679, 131072, 0, 393215, 131072, 0, 327680, 0, 0, 327681, 196608, 0, 327682, 131072, 0, 262146, 131072, 0, 262147, 65536, 0, 262148, 131072, 0, 262149, 131072, 0, 262150, 65536, 0, 262151, 0, 0, 262152, 131072, 0, 196616, 131072, 0, 196617, 65536, 0, 131081, 196608, 0, 65545, 0, 0, 9, 0, 0, -65527, 131072, 0, -131063, 65536, 0, -196599, 0, 0, -262135, 0, 0, -262136, 131072, 0, -262137, 131072, 0, -327673, 0, 0, -327672, 131072, 0, -327674, 131072, 0, -327675, 0, 0, -327676, 0, 0, -262141, 196608, 0, -262139, 196608, 0, -262138, 65536, 0, -196601, 65536, 0, -196602, 196608, 0, -65528, 0, 0, 8, 196608, 0, -131064, 65536, 0, -196600, 131072, 0, 131079, 0, 0, 196615, 0, 0, 65544, 131072, 0, 131078, 131072, 0, 196614, 0, 0, 196613, 65536, 0, 196612, 196608, 0, 196611, 65536, 0, 131077, 131072, 0, 131080, 131072, 0, 196610, 65536, 0, 196609, 65536, 0, 262145, 0, 0, 262144, 131072, 0, 196608, 196608, 0, 131072, 196608, 0, 65536, 131072, 0, 131073, 0, 0, 131074, 196608, 0, 2, 65536, 0, 65538, 65536, 0, 131071, 0, 0, -2, 0, 0, 65537, 131072, 0, -65537, 196608, 0, 131070, 196608, 0, 65534, 0, 0, -65538, 65536, 0, -131074, 131072, 0, -196610, 0, 0, -196609, 65536, 0, -262144, 65536, 0, -196608, 65536, 0, -196607, 196608, 0, -131072, 131072, 0, -262143, 196608, 0, -131073, 196608, 0, -131071, 196608, 0, -262142, 131072, 0, 393213, 65536, 0, 393212, 196608, 0, 393211, 131072, 0, 393210, 65536, 0, 393209, 131072, 0, 327674, 196608, 0, 262138, 65536, 0, 262137, 196608, 0, 196601, 65536, 0, 196602, 196608, 0, 327673, 196608, 0, 131065, 0, 0, 65529, 0, 0, -7, 65536, 0, -8, 0, 0, -65544, 196608, 0, -131080, 65536, 0, -196616, 65536, 0, -262152, 131072, 0, -327688, 0, 0, -393224, 196608, 0, -327687, 0, 0, -262151, 131072, 0, -196615, 131072, 0, -131079, 131072, 0, -65543, 0, 0, 131064, 65536, 0, 65528, 131072, 0, -131081, 196608, 0, -196617, 65536, 0, -262153, 196608, 0, -327689, 0, 0, -393225, 131072, 0, 196599, 65536, 0, 262135, 65536, 0, 327671, 0, 0, 393207, 131072, 0, 131063, 65536, 0, -9, 0, 0, 65527, 196608, 0, -65545, 196608, 0, 458743, 196608, 0, 393208, 196608, 0, 327672, 196608, 0, 262136, 131072, 0, 196600, 131072, 0, 458744, 65536, 0, 524280, 196608, 0, 589816, 65536, 0, 655352, 0, 0, 655353, 196608, 0, 655354, 0, 0, 655355, 65536, 0, 589819, 65536, 0, 524283, 131072, 0, 524282, 65536, 0, 458746, 196608, 0, 458745, 65536, 0, 655351, 196608, 0, 720888, 196608, 0, 720889, 196608, 0, 720890, 196608, 0, 720891, 196608, 0, 655356, 0, 0, 589820, 65536, 0, 524284, 0, 0, 458747, 196608, 0, 589817, 131072, 0, 524281, 196608, 0, 524279, 196608, 0, 589815, 196608, 0, 720887, 131072, 0, 589818, 131072, 0, 458748, 65536, 0, 458749, 65536, 0, 524285, 196608, 0, 524286, 65536, 0, 524287, 65536, 0, 458752, 0, 0, 458753, 131072, 0, 458754, 196608, 0, 458755, 131072, 0, 458756, 0, 0, 458757, 65536, 0, 458758, 196608, 0, 458759, 131072, 0, 458760, 0, 0, 458761, 0, 0, 458762, 131072, 0, 458763, 131072, 0, 458764, 196608, 0, 458765, 65536, 0, 524301, 0, 0, 589837, 0, 0, 655373, 65536, 0, 655372, 196608, 0, 655370, 131072, 0, 655369, 0, 0, 655368, 131072, 0, 655367, 131072, 0, 655366, 131072, 0, 655365, 65536, 0, 655364, 65536, 0, 655363, 0, 0, 655362, 131072, 0, 655361, 196608, 0, 655360, 131072, 0, 720895, 131072, 0, 720894, 0, 0, 720893, 65536, 0, 720892, 196608, 0, 655357, 65536, 0, 655358, 65536, 0, 589821, 65536, 0, 589822, 0, 0, 655359, 196608, 0, 589824, 65536, 0, 589825, 131072, 0, 589826, 131072, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 131072, 0, 589831, 131072, 0, 589832, 131072, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 655371, 196608, 0, 589836, 65536, 0, 524300, 65536, 0, 524299, 65536, 0, 524298, 0, 0, 524297, 0, 0, 524296, 131072, 0, 524295, 131072, 0, 524294, 0, 0, 524293, 131072, 0, 524292, 65536, 0, 524291, 131072, 0, 524290, 131072, 0, 524289, 0, 0, 524288, 131072, 0, 589823, 131072, 0, 393229, 131072, 0, 327693, 0, 0, 262157, 65536, 0, 196621, 0, 0, 131085, 0, 0, 65549, 0, 0, 13, 0, 0, -65523, 131072, 0, -131059, 65536, 0, -196595, 65536, 0, -262131, 131072, 0, -327667, 196608, 0, -393203, 196608, 0, -458739, 131072, 0, -458740, 131072, 0, -458741, 131072, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 131072, 0, -131061, 131072, 0, -65525, 131072, 0, 11, 0, 0, 65547, 0, 0, 65548, 0, 0, 131084, 131072, 0, 196620, 196608, 0, 262156, 0, 0, 327692, 196608, 0, 393228, 65536, 0, 393227, 131072, 0, 327691, 0, 0, 262155, 131072, 0, 196619, 65536, 0, 131083, 131072, 0, -262132, 65536, 0, -327668, 131072, 0, -393204, 0, 0, -196596, 196608, 0, -131060, 65536, 0, -65524, 0, 0, 12, 196608, 0, -393223, 196608, 0, -458759, 65536, 0, -524295, 196608, 0, -524296, 65536, 0, -524297, 0, 0, -458761, 196608, 0, -458760, 131072, 0, -458758, 65536, 0, -524294, 196608, 0, -524293, 131072, 0, -524292, 196608, 0, -524291, 196608, 0, -524290, 0, 0, -524289, 65536, 0, -589824, 196608, 0, -589823, 131072, 0, -589822, 65536, 0, -589821, 65536, 0, -589820, 65536, 0, -589819, 65536, 0, -589818, 131072, 0, -589817, 196608, 0, -589816, 65536, 0, -589815, 65536, 0, -589814, 196608, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -524275, 65536, 0, -524276, 196608, 0, -524277, 196608, 0, -524278, 0, 0, -524279, 0, 0, -524280, 131072, 0, -524281, 0, 0, -524282, 196608, 0, -524283, 0, 0, -524284, 0, 0, -524285, 0, 0, -524286, 0, 0, -524287, 131072, 0, -524288, 196608, 0, -458753, 0, 0, -458754, 65536, 0, -458755, 196608, 0, -458756, 65536, 0, -458757, 0, 0, -393222, 65536, 0, -393221, 0, 0, -393220, 65536, 0, -393219, 65536, 0, -393218, 65536, 0, -393217, 196608, 0, -458752, 196608, 0, -458751, 196608, 0, -458750, 65536, 0, -458749, 0, 0, -458748, 196608, 0, -458747, 65536, 0, -458746, 196608, 0, -458745, 65536, 0, -458744, 0, 0, -458743, 131072, 0, -458742, 0, 0, -393206, 0, 0, -655347, 196608, 0, -655348, 196608, 0, -655349, 0, 0, -655350, 65536, 0, -655351, 0, 0, -655352, 65536, 0, -655353, 65536, 0, -655354, 196608, 0, -655355, 65536, 0, -655356, 131072, 0, -655357, 0, 0, -655358, 131072, 0, -655359, 196608, 0, -655360, 131072, 0, -589825, 65536, 0, -589826, 196608, 0, -589827, 196608, 0, -589828, 196608, 0, -589829, 65536, 0, -589830, 65536, 0, -589831, 196608, 0, -589832, 196608, 0, -589833, 196608, 0, -589834, 0, 0, -524298, 196608, 0, -458762, 65536, 0, -393226, 0, 0, -327690, 0, 0, -196618, 0, 0, -131082, 131072, 0, -262154, 131072, 0, -65546, 131072, 0, -10, 0, 0, 65526, 0, 0, 131062, 65536, 0, 327670, 65536, 0, 262134, 196608, 0, 196598, 65536, 0, 393206, 196608, 0, 720886, 131072, 0, 655350, 0, 0, 589814, 196608, 0, 524278, 131072, 0, 458742, 131072, 0, 655374, 131072, 0, 589838, 65536, 0, 524302, 0, 0, 458766, 0, 0, 393230, 0, 0, 327694, 196608, 0, 262158, 65536, 0, 196622, 196608, 0, 131086, 0, 0, 65550, 0, 0, 14, 131072, 0, -65522, 65536, 0, -131058, 131072, 0, -196594, 196608, 0, -262130, 0, 0, -327666, 65536, 0, -393202, 131072, 0, -458738, 0, 0, -524274, 65536, 0, -589810, 0, 0, -655346, 196608, 0)

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("ui")]
script = ExtResource("1_oaghk")
ui = NodePath("../CanvasLayer/RichTextLabel")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(5, 5)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_w8afk")

[node name="CrowdArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/CrowdArea"]
shape = SubResource("CircleShape2D_2ijn5")

[node name="PoliceArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PoliceArea"]
shape = SubResource("CircleShape2D_2ijn5")

[node name="PlayerShape" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_iwucn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_top = -1.0
offset_right = 40.0
offset_bottom = 40.0

[node name="HumanGroup" type="Node" parent="."]

[node name="Human2" parent="." instance=ExtResource("5_3jnbg")]
position = Vector2(126, -52)

[node name="Police" parent="." instance=ExtResource("6_ynnnc")]
position = Vector2(-70, -104)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_62onc")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-37, -77)
rotation = 0.00574706
script = ExtResource("7_wrlii")

[node name="Human" parent="Path2D/PathFollow2D" instance=ExtResource("4_7qnxo")]
rotation = -0.00574706

[connection signal="area_entered" from="Player/CrowdArea" to="Player" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Player/CrowdArea" to="Player" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Player/PoliceArea" to="Player" method="_on_police_area_area_entered"]
